# re-edit

./: .gitignore  CMakeLists.txt  README.md  configure.py  fetch-GoogleTest.cmake  notes.txt  re-edit.py.in
cmake/: MacOSXBundleInfo.plist.in  REEditFetchContent.cmake  fetch-GoogleTest.cmake  fetch_re-mock.cmake
src/cpp/re/edit/: AppContext.cpp  AppContext.h  AppContext.hpp  Application.cpp  Application.h  BuiltIns.cpp  Canvas.cpp  Canvas.h  Clipboard.cpp  Clipboard.h  Color.cpp  Color.h  Config.h  Constants.h  ControlView.cpp  ControlView.h  Dialog.cpp  Dialog.h  DrawContext.cpp  DrawContext.h  EditContext.cpp  EditContext.h  Errors.h  FilmStrip.cpp  FilmStrip.h  FontManager.cpp  FontManager.h  Graphics.cpp  Graphics.h  Grid.h  LoggingManager.cpp  LoggingManager.h  MTLTextureManager.cpp  MTLTextureManager.h  NetworkManager.cpp  NetworkManager.h  Notification.cpp  Notification.h  Panel.cpp  Panel.h  (+39 more)
src/cpp/re/edit/logging/: logging.h  loguru.hpp
src/cpp/re/edit/lua/: Base.cpp  Base.h  ConfigParser.cpp  ConfigParser.h  Device2D.cpp  Device2D.h  HDGui2D.cpp  HDGui2D.h  ReEdit.cpp  ReEdit.h
src/cpp/re/edit/macos/: MTLManagers.cpp  MTLManagers.h  MTLTextureManager.cpp  MTLTextureManager.h  NSUserDefaultsManager.h  main.cpp  main.mm  metal.cpp
src/cpp/re/edit/platform/: GLFWContext.cpp  GLFWContext.h  NativeApplication.h  RLContext.cpp  RLContext.h  main.cpp
src/cpp/re/edit/platform/macos/: MTLManagers.cpp  MTLManagers.h  MacOSMultipleInstanceManager.h  MacOSMultipleInstanceManager.mm  MacOSNativeApplication.cpp  MacOSNativeApplication.h  MacOSNetworkManager.h  MacOSNetworkManager.mm  NSUserDefaultsManager.h  NSUserDefaultsManager.mm  main.cpp
src/cpp/re/edit/platform/windows/: LocalSettingsManager.cpp  LocalSettingsManager.h  OGL3Managers.cpp  OGL3Managers.h  WindowsMultipleInstanceManager.cpp  WindowsMultipleInstanceManager.h  WindowsNativeApplication.cpp  WindowsNativeApplication.h  WindowsNetworkManager.cpp  WindowsNetworkManager.h  main.cpp
src/cpp/re/edit/windows/: OGL3Managers.cpp  OGL3Managers.h  OGL3TextureManager.cpp  OGL3TextureManager.h  main.cpp
src/resources/: re-edit.icns  re-edit.rc
test/cpp/re/edit/lua/: TestConfigParser.cpp  TestDevice2D.cpp  TestHDGui2D.cpp  TestMisc.cpp
test/resources/re/edit/lua/: all-device_2D.lua  all-hdgui_2D.lua  info.lua  re-cva-7-device_2D.lua  re-cva-7-hdgui_2D.lua
